# codekata

./: .gitignore  README.md
c_style_check/: TODO.md
c_style_check/bash/: c_style_check.sh  mon.sh
c_style_check/c/: Makefile  c_style_check  c_style_check.c  mon.sh
c_style_check/clj/: CHANGELOG.md  mon.sh  project.clj
c_style_check/clj/src/clj/: c_style_check.c  core.clj
c_style_check/cpp/: CMakeLists.txt  c_style_check.cpp  mon.sh
c_style_check/go/: Makefile  c_style_check  c_style_check.go  mon.sh
c_style_check/java/: CStyleCheck.java  mon.sh
c_style_check/javascript/: c_style_check.js  mon.sh
c_style_check/julia/: c_style_check.jl  mon.sh
c_style_check/lua/: c_style_check.lua  mon.sh
c_style_check/ruby/: c_style_check.rb  mon.sh
c_style_check/rust/: Cargo.toml
c_style_check/rust/src/: main.rs
jinja/: README.md
jinja/cpp/: CMakeLists.txt  README.md  genciconf.cpp  mon.sh
jinja/go/: README.md  genciconf.go
jinja/java/: App.java  README.md
jinja/javascript/: README.md  genciconf.js
jinja/lua/: README.md  genciconf.lua
jinja/python/: README.md  genciconf.py
jinja/ruby/: README.md  genciconf.rb
